--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-<title>Pika & Berk – V23 (3 Seçenekli)</title>
+<title>Pika & Berk – V23.2 (Üç Seçenek – Full)</title>
 <style>
-:root{
-  --card-w:170px;
-  --card-h:220px;
-}
-*{box-sizing:border-box;}
+:root{ --card-w:170px; --card-h:220px; }
+*{ box-sizing:border-box; }
 body{
-  margin:0;
+  margin:0; height:100vh; overflow:hidden;
   background:linear-gradient(to bottom right,#b3e5fc,#e1f5fe);
-  height:100vh; overflow:hidden;
   font-family:"Comic Sans MS",system-ui,sans-serif;
-  position:relative;
 }
 
 /* YÖNERGE */
@@ -23,12 +18,12 @@ body{
   position:absolute; top:50px; left:40px;
   background:#fff9e6; border:3px solid #f6c453; border-radius:14px;
   padding:10px 14px; box-shadow:0 3px 8px rgba(0,0,0,.12);
-  z-index:20; min-width:210px;
+  z-index:20; min-width:220px;
 }
 #instructionBox .title{ font-weight:700; margin-bottom:4px; }
 #instructionBox .line{ font-weight:700; font-size:13px; text-transform:uppercase; margin:1px 0; }
 
-/* Üstteki üç seçenek kartı */
+/* Üstteki ÜÇ seçenek kartı */
 .option-card{
   width:var(--card-w); height:var(--card-h);
   background:#fff; border:3px solid rgba(11,132,165,.4); border-radius:16px;
@@ -37,9 +32,9 @@ body{
   padding:6px 8px; user-select:none; z-index:10;
   transition:transform .25s ease, border-color .2s ease, box-shadow .2s ease;
 }
-#optionLeft{   top:14%; left:18%; }
+#optionLeft{   top:14%; left:15%; }
 #optionCenter{ top:14%; left:50%; transform:translateX(-50%); }
-#optionRight{  top:14%; right:18%; }
+#optionRight{  top:14%; right:15%; }
 
 .card-tr{
   margin-top:2px; font-weight:800; text-transform:uppercase; text-align:center; font-size:14px;
@@ -73,7 +68,7 @@ body{
 .bar-slot{
   width:22px; height:22px; border-radius:6px;
   display:flex; align-items:center; justify-content:center; font-size:16px;
-  background:rgba(255,255,255,.95); transition:opacity .25s ease, transform .25s ease;
+  background:#fff; transition:opacity .25s ease, transform .25s ease;
 }
 .bar-slot.empty{ opacity:.25; transform:scale(.9); }
 
@@ -112,45 +107,41 @@ body{
 <!-- YÖNERGE -->
 <div id="instructionBox">
   <div class="title">YÖNERGE :</div>
-  <div class="line" id="line1">- EŞLE</div>
-  <div class="line" id="line2">- AYNI OLANI EŞLE</div>
+  <div class="line">- EŞLE</div>
+  <div class="line">- AYNI OLANI EŞLE</div>
   <div class="line" id="line3">- ELMAYI EŞLE</div>
 </div>
 
 <!-- Üç üst seçenek -->
 <div class="option-card" id="optionLeft">
   <div class="card-tr" id="leftTr"></div>
-  <img class="card-img" id="leftImg" src="">
+  <img class="card-img" id="leftImg" alt="">
   <div class="card-en" id="leftEn"></div>
 </div>
 <div class="option-card" id="optionCenter">
   <div class="card-tr" id="centerTr"></div>
-  <img class="card-img" id="centerImg" src="">
+  <img class="card-img" id="centerImg" alt="">
   <div class="card-en" id="centerEn"></div>
 </div>
 <div class="option-card" id="optionRight">
   <div class="card-tr" id="rightTr"></div>
-  <img class="card-img" id="rightImg" src="">
+  <img class="card-img" id="rightImg" alt="">
   <div class="card-en" id="rightEn"></div>
 </div>
 
 <!-- Alt sürüklenen kart -->
 <div id="dragCard">
   <div class="card-tr" id="dragTr"></div>
-  <img class="card-img" id="dragImg" src="">
+  <img class="card-img" id="dragImg" alt="">
   <div class="card-en" id="dragEn"></div>
 </div>
 
 <!-- SABİT sembol barı -->
 <div id="symbolBar">
-  <div class="bar-slot" id="b1">⭐</div>
-  <div class="bar-slot" id="b2">⭐</div>
-  <div class="bar-slot" id="b3">⭐</div>
-  <div class="bar-slot" id="b4">⭐</div>
-  <div class="bar-slot" id="b5">⭐</div>
-  <div class="bar-slot" id="b6">⭐</div>
-  <div class="bar-slot" id="b7">⭐</div>
-  <div class="bar-slot" id="b8">⭐</div>
+  <div class="bar-slot" id="b1">⭐</div><div class="bar-slot" id="b2">⭐</div>
+  <div class="bar-slot" id="b3">⭐</div><div class="bar-slot" id="b4">⭐</div>
+  <div class="bar-slot" id="b5">⭐</div><div class="bar-slot" id="b6">⭐</div>
+  <div class="bar-slot" id="b7">⭐</div><div class="bar-slot" id="b8">⭐</div>
 </div>
 
 <!-- Sağ alttaki sembol tahtası -->
@@ -169,7 +160,7 @@ body{
 <audio id="wrongSound"   src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_21cda77a64.mp3"></audio>
 
 <script>
-/* 50 NESNE (TR-EN, assets/*.png) */
+/* 50 NESNE (TR-EN, ./assets/*.png) */
 const ITEMS = [
   // meyveler
   {id:"elma", tr:"Elma", en:"Apple"},
@@ -227,7 +218,7 @@ const ITEMS = [
   {id:"yunus", tr:"Yunus", en:"Dolphin"},
 ];
 
-/* Elemanlar */
+/* ELEMANLAR */
 const instructionLine3 = document.getElementById("line3");
 
 const optionLeft   = document.getElementById("optionLeft");
@@ -251,31 +242,28 @@ const dragImg  = document.getElementById("dragImg");
 const dragTr   = document.getElementById("dragTr");
 const dragEn   = document.getElementById("dragEn");
 
+/* BAR & TAHTA */
 const barSlots = [
-  document.getElementById("b1"), document.getElementById("b2"),
-  document.getElementById("b3"), document.getElementById("b4"),
-  document.getElementById("b5"), document.getElementById("b6"),
-  document.getElementById("b7"), document.getElementById("b8"),
+  document.getElementById("b1"),document.getElementById("b2"),document.getElementById("b3"),document.getElementById("b4"),
+  document.getElementById("b5"),document.getElementById("b6"),document.getElementById("b7"),document.getElementById("b8"),
 ];
 const boardSlots = [
-  document.getElementById("s1"), document.getElementById("s2"),
-  document.getElementById("s3"), document.getElementById("s4"),
-  document.getElementById("s5"), document.getElementById("s6"),
-  document.getElementById("s7"), document.getElementById("s8"),
+  document.getElementById("s1"),document.getElementById("s2"),document.getElementById("s3"),document.getElementById("s4"),
+  document.getElementById("s5"),document.getElementById("s6"),document.getElementById("s7"),document.getElementById("s8"),
 ];
 
 const flyStar      = document.getElementById("flyStar");
 const correctSound = document.getElementById("correctSound");
 const wrongSound   = document.getElementById("wrongSound");
 
-/* Durumlar */
+/* DURUMLAR */
 let currentItem=null, wrongA=null, wrongB=null, attempt=1;
 let collectedOnBoard=0, countingMode=false, counted=0;
 
-/* Pekiştireçler */
+/* PEKİŞTİREÇLER */
 const praiseTexts=["Aferin","Bravo","Süpersin","Harika gidiyorsun"];
 
-/* Yardımcılar */
+/* YARDIMCILAR */
 function randomItem(){ return ITEMS[Math.floor(Math.random()*ITEMS.length)]; }
 function shuffle(arr){ for(let i=arr.length-1;i>0;i--){ const j=Math.floor(Math.random()*(i+1)); [arr[i],arr[j]]=[arr[j],arr[i]]; } return arr; }
 function toAccusative(word){
@@ -291,68 +279,60 @@ function toAccusative(word){
 }
 function speakTR(t){ if(!("speechSynthesis" in window)) return; const u=new SpeechSynthesisUtterance(t); u.lang="tr-TR"; speechSynthesis.speak(u); }
 
+/* YÖNERGE */
 function updateInstruction(){
   const acc=toAccusative(currentItem.tr).toUpperCase();
-  instructionLine3.textContent="- "+acc+" EŞLE";
+  instructionLine3.textContent = "- " + acc + " EŞLE";
 }
 
-/* Üç seçenek render */
+/* 3 SEÇENEK RENDER */
+function setOption(trEl,imgEl,enEl,item){
+  trEl.textContent = item.tr.toUpperCase();
+  imgEl.src = `./assets/${item.id}.png`;
+  imgEl.dataset.id = item.id;
+  enEl.textContent = item.en.toLowerCase();
+}
 function renderQuestion(){
   updateInstruction();
 
-  // 3 seçenek içeriği
-  const options = [
-    {ref:"L", data: currentItem},
-    {ref:"C", data: wrongA},
-    {ref:"R", data: wrongB},
-  ];
-  shuffle(options);
+  const options = shuffle([ currentItem, wrongA, wrongB ]);
+  setOption(leftTr,leftImg,leftEn,   options[0]);
+  setOption(centerTr,centerImg,centerEn, options[1]);
+  setOption(rightTr,rightImg,rightEn, options[2]);
 
-  // SOL
-  setOption(leftTr,leftImg,leftEn, options[0].data);
-  // ORTA
-  setOption(centerTr,centerImg,centerEn, options[1].data);
-  // SAĞ
-  setOption(rightTr,rightImg,rightEn, options[2].data);
-
-  // alt (drag)
   dragTr.textContent = currentItem.tr.toUpperCase();
-  dragImg.src = `assets/${currentItem.id}.png`;
+  dragImg.src = `./assets/${currentItem.id}.png`;
   dragEn.textContent = currentItem.en.toLowerCase();
 
   resetDragPosition();
 }
-function setOption(trEl,imgEl,enEl,item){
-  trEl.textContent = item.tr.toUpperCase();
-  imgEl.src = `assets/${item.id}.png`;
-  enEl.textContent = item.en.toLowerCase();
-  imgEl.dataset.id = item.id;
-}
 
+/* YENİ SORU */
 function loadNew(){
   currentItem = randomItem();
-  // iki farklı yanlış seç
-  do{ wrongA=randomItem(); } while(wrongA.id===currentItem.id);
-  do{ wrongB=randomItem(); } while(wrongB.id===currentItem.id || wrongB.id===wrongA.id);
-  attempt=1;
+  do{ wrongA = randomItem(); } while(wrongA.id===currentItem.id);
+  do{ wrongB = randomItem(); } while(wrongB.id===currentItem.id || wrongB.id===wrongA.id);
+  attempt = 1;
   renderQuestion();
 }
 
+/* DRAG */
 function resetDragPosition(){
   dragCard.style.transition="all .25s ease";
   dragCard.style.left="50%"; dragCard.style.bottom="18%"; dragCard.style.top="";
   dragCard.style.transform="translateX(-50%)";
 }
 
-/* DRAG */
 let isDragging=false,startX=0,startY=0,startLeft=0,startTop=0;
 dragCard.addEventListener("mousedown",dragStart);
 dragCard.addEventListener("touchstart",dragStart,{passive:false});
+
 function dragStart(e){
   e.preventDefault(); isDragging=true;
   const p=e.touches?e.touches[0]:e; startX=p.clientX; startY=p.clientY;
   const rect=dragCard.getBoundingClientRect(); startLeft=rect.left; startTop=rect.top;
   dragCard.style.transition="none"; dragCard.style.cursor="grabbing";
+
   document.addEventListener("mousemove",dragging);
   document.addEventListener("touchmove",dragging,{passive:false});
   document.addEventListener("mouseup",dragEnd);
@@ -361,10 +341,13 @@ function dragStart(e){
 function dragging(e){
   if(!isDragging) return;
   const p=e.touches?e.touches[0]:e; const dx=p.clientX-startX; const dy=p.clientY-startY;
-  dragCard.style.left=(startLeft+dx)+"px"; dragCard.style.top=(startTop+dy)+"px"; dragCard.style.transform="none";
+  dragCard.style.left=(startLeft+dx)+"px";
+  dragCard.style.top=(startTop+dy)+"px";
+  dragCard.style.transform="none";
 }
 function dragEnd(){
-  if(!isDragging) return; isDragging=false; dragCard.style.cursor="grab";
+  if(!isDragging) return;
+  isDragging=false; dragCard.style.cursor="grab";
   document.removeEventListener("mousemove",dragging);
   document.removeEventListener("touchmove",dragging);
   document.removeEventListener("mouseup",dragEnd);
@@ -374,6 +357,7 @@ function dragEnd(){
   const l=optionLeft.getBoundingClientRect();
   const c=optionCenter.getBoundingClientRect();
   const r=optionRight.getBoundingClientRect();
+
   const hitL=!(d.right<l.left||d.left>l.right||d.bottom<l.top||d.top>l.bottom);
   const hitC=!(d.right<c.left||d.left>c.right||d.bottom<c.top||d.top>c.bottom);
   const hitR=!(d.right<r.left||d.left>r.right||d.bottom<r.top||d.top>r.bottom);
@@ -391,7 +375,7 @@ function dragEnd(){
   }
 }
 
-/* DOĞRU/YANLIŞ */
+/* DOĞRU/YANLIŞ AKIŞI */
 function handleCorrect(){
   dragCard.classList.add("correct");
   correctSound.currentTime=0; correctSound.play().catch(()=>{});
@@ -401,7 +385,7 @@ function handleCorrect(){
   if(attempt===1){
     setTimeout(()=>{
       dragCard.classList.remove("correct");
-      shuffleTopOptions(); // 3 kartı karıştır
+      shuffleTopOptions();
       attempt=2;
       resetDragPosition();
     },500);
@@ -421,19 +405,15 @@ function handleWrong(){
   },500);
 }
 
-/* 3 kartı içeriğini karıştırma */
+/* ÜST 3 KARTI KARIŞTIR (İÇERİK) */
 function shuffleTopOptions(){
   const pack = [
     {img:leftImg, tr:leftTr, en:leftEn},
     {img:centerImg, tr:centerTr, en:centerEn},
     {img:rightImg, tr:rightTr, en:rightEn},
   ];
-  // mevcut değerleri çek
-  const states = pack.map(p=>({
-    src:p.img.src, id:p.img.dataset.id, tr:p.tr.textContent, en:p.en.textContent
-  }));
+  const states = pack.map(p=>({src:p.img.src, id:p.img.dataset.id, tr:p.tr.textContent, en:p.en.textContent}));
   shuffle(states);
-  // geri yaz
   for(let i=0;i<3;i++){
     pack[i].img.src = states[i].src;
     pack[i].img.dataset.id = states[i].id;
@@ -442,31 +422,18 @@ function shuffleTopOptions(){
   }
 }
 
-/* SEMBOL SİSTEMİ – Bar soldan sağa azalır, ⭐ tahtaya gider; sonra sayarak bar’a döner */
-const barSlots = [
-  document.getElementById("b1"), document.getElementById("b2"),
-  document.getElementById("b3"), document.getElementById("b4"),
-  document.getElementById("b5"), document.getElementById("b6"),
-  document.getElementById("b7"), document.getElementById("b8"),
-];
-const boardSlots = [
-  document.getElementById("s1"), document.getElementById("s2"),
-  document.getElementById("s3"), document.getElementById("s4"),
-  document.getElementById("s5"), document.getElementById("s6"),
-  document.getElementById("s7"), document.getElementById("s8"),
-];
-
+/* SEMBOL SİSTEMİ — Bar soldan sağa azalır; ⭐ tahtaya gider; sayarken ⭐ bar’a döner */
 function initBar(){ barSlots.forEach(s=>s.classList.remove("empty")); }
 function firstFilledBarIndex(){ return barSlots.findIndex(s=>!s.classList.contains("empty")); }
 function firstEmptyBarIndex(){ return barSlots.findIndex(s=>s.classList.contains("empty")); }
 
 function gainSymbol(){
-  if(countingMode) return; // sayma modunda değilken kazan
-  // 1) BAR’dan bir ⭐ eksilt (soldan sağa)
+  if(countingMode) return;
+  // BAR’dan bir ⭐ eksilt (soldan sağa)
   const i = firstFilledBarIndex();
-  if(i!==-1){ barSlots[i].classList.add("empty"); }
+  if(i!==-1) barSlots[i].classList.add("empty");
 
-  // 2) Uçan yıldız → tahtaya
+  // Uçan ⭐ animasyonu → tahtaya
   flyStar.style.top="65%"; flyStar.style.left="50%";
   flyStar.style.opacity=1; flyStar.style.transform="translate(-50%,-50%) scale(1)";
   setTimeout(()=>{
@@ -474,7 +441,7 @@ function gainSymbol(){
     flyStar.style.opacity=0; flyStar.style.transform="translate(-50%,-50%) scale(.3)";
   },100);
 
-  // 3) Tahtaya ekle
+  // Tahtaya ekle
   setTimeout(()=>{
     if(collectedOnBoard<8){
       boardSlots[collectedOnBoard].textContent="⭐";
@@ -487,25 +454,27 @@ function gainSymbol(){
   },400);
 }
 
-/* Tahtada sayma → bar’a geri gönderme */
-boardSlots.forEach((slot,idx)=>{
+/* TAHTADA SAYMA → BAR’A GERİ GÖNDERME */
+boardSlots.forEach(slot=>{
   slot.addEventListener("click", ()=>{
     if(!countingMode) return;
     if(!slot.classList.contains("active")) return;
 
-    // tahtadan kaldır
-    slot.classList.remove("active"); slot.textContent=""; collectedOnBoard--;
+    // Tahtadan kaldır
+    slot.classList.remove("active");
+    slot.textContent="";
+    collectedOnBoard--;
     counted++;
 
-    // sayıyı seslendir
+    // Sesli say
     const numbers=["bir","iki","üç","dört","beş","altı","yedi","sekiz"];
     speakTR(numbers[counted-1]);
 
-    // bar’a geri ekle (soldan boş ilk yeri doldur)
+    // Bar’a geri ekle (soldan boş ilk yeri doldur)
     const j = firstEmptyBarIndex();
-    if(j!==-1){ barSlots[j].classList.remove("empty"); }
+    if(j!==-1) barSlots[j].classList.remove("empty");
 
-    // final
+    // Final
     if(counted===8){
       setTimeout(()=>{
         speakTR("Bravo! Tüm sembolleri topladın.");
